# no-more-forwards-bot

./: README.md  main.py  pyproject.toml  requirements.txt
cogs/: checkForward.py
